# Deed

./: AGGREGATIONS_DEMO.md  ARCHITECTURE.md  COMPARISON_GUIDE.md  CRUD_GUIDE.md  DQL_DESIGN.md  DQL_IMPLEMENTATION.md  FEATURE_AUDIT.md  GETTING_STARTED.md  HIGH_AVAILABILITY_GUIDE.md  NOVEL_STORAGE.md  PERFORMANCE.md  PRODUCTION_FEATURES_GUIDE.md  QUERY_LANGUAGES.md  QUICKSTART.md  QUICKSTART_MAC.md  R.md  README.md  ROADMAP.md  RUST_QUICKSTART.md  SCHEMA_TRANSACTION_DESIGN.md  SUMMARY.md  TESTING_GUIDE.md  TRANSACTIONS_GUIDE.md  TRANSACTION_DESIGN.md  TUTORIAL_BEGINNER.md  TUTORIAL_VETERAN.md  VALUE_PROPOSITION.md  requirements.txt  run_all_tests.sh  setup.py
deed/: __init__.py
deed-rust/: Cargo.toml  README.md
deed-rust/benches/: transaction_benchmarks.rs
deed-rust/examples/: JavaClient.java  distributed_database_demo.rs  ecommerce_demo.rs  my_first_deed.rs  nodejs_client.js  python_client.py  rest_api_server.rs  test_backup_restore.rs  test_graph_features.rs  test_hybrid_queries.rs  test_indexes.rs  test_optimizer.rs  test_transactions.rs  test_wal_recovery.rs
deed-rust/src/: admin_dashboard.rs  auth.rs  backup.rs  btree.rs  connection_pool.rs  distributed_2pc.rs  distributed_consensus.rs  distributed_metrics.rs  distributed_p2p.rs  distributed_partition.rs  distributed_query.rs  distributed_recovery.rs  distributed_shard.rs  distributed_topology.rs  dql_ast.rs  dql_executor.rs  dql_ir.rs  dql_lexer.rs  dql_optimizer.rs  dql_parser.rs  executor.rs  ffi.rs  graph.rs  lib.rs  mvcc.rs  replication.rs  schema.rs  storage.rs  transaction.rs  types.rs  wal.rs
deed-rust/tests/: crash_recovery_tests.rs  crud_tests.rs  dql_integration_tests.rs  integration_tests.rs  production_features_tests.rs  transaction_stress_tests.rs
deed/algorithms/: __init__.py  ant_colony.py  bee_quorum.py  physarum.py  stigmergy.py
deed/core/: __init__.py  collection.py  edge.py  entity.py  graph.py
deed/query/: __init__.py  cypher_parser.py  executor.py  query_interface.py  sql_parser.py
examples/: demo_basic.py  demo_crud.rs  demo_dql.rs  demo_query_languages.py  demo_swarm_intelligence.py
