[package]
name = "deed-rust"
version = "0.1.0"
edition = "2021"
authors = ["Deed Project"]
description = "High-performance Rust core for Deed biologically-inspired database"
license = "MIT"

[lib]
name = "deed_core"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[dependencies]
# Python FFI
pyo3 = { version = "0.20", features = ["extension-module"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage backend (RocksDB)
rocksdb = "0.21"

# Networking
tonic = "0.10"  # gRPC
prost = "0.12"

# Utilities
dashmap = "5.5"  # Concurrent hashmap
parking_lot = "0.12"  # Better locks
crossbeam = "0.8"  # Lock-free structures

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"  # Benchmarking
proptest = "1.4"   # Property-based testing

[[bench]]
name = "storage_bench"
harness = false

[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
opt-level = 3        # Maximum optimization
